[package]
name = "inotify-test"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3"
inotify = { version = "0.11", features = ["stream"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
