[package]
name = "hello-grpc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hello-server"
path = "src/server.rs"

[[bin]]
name = "hello-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-prost-build = "*"
